--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css" />
     <script type="module" src="js/canvas_ui/canvas_ui.js"></script>
+    <script type="module" src="js/ui/memory.js"></script>
     <script type="module" src="js/script.js"></script>
   </head>
   <body>
